...
    <string name="auth_with_social_network">С помощью социальных сетей</string>
    <string name="auth_with_email">С помощью электронной почты</string>
    <string name="auth_or_login">Уже есть аккаунт?</string>
    <string name="or_auth_in_one_click">Или войдите в один клик</string>
    <string name="auth_create_new_account">Создать новый аккаунт</string>
    <string name="auth_create_new_account_and_bind">Зарегистрироваться через VK ID</string>
    <string name="auth_label_login">Войти</string>
    <string name="auth_label_create">Создать</string>
    <string name="auth_label_login_with_vk">Войти через VK ID</string>
    <string name="auth_label_login_with_gos">Войти через Госуслуги</string>
    <string name="auth_title_login_fragment">Вход</string>
    <string name="email">E-mail</string>
    <string name="login">Логин</string>
...
    <string name="chat_list">Чаты</string>
    <string name="go_to_event">Участвовать</string>
    <string name="subscribe">Подписаться</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="show_more">Показать полностью</string>
    <string name="rate">Оценить</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="ok">Ок</string>
    <string name="get">Получить \"Максимальный\"</string>
    <string name="cancel">Отмена</string>
    <string name="revoke">Отменить</string>
    <string name="add_record">Добавить запись</string>
    <string name="add_file">Добавить файл</string>
...
    <string name="recovery_set_password_title">Пожалуйста, укажите новый пароль и нажмите кнопку «Сохранить»</string>
    <string name="recovery_confirm_password">Подтвердите пароль</string>
    <string name="recovery_password_wrong_email_error">Упс… Такой пользователь не найден.\nПожалуйста, убедитесь, что указали правильный %s, и повторите попытку.</string>
    <string name="recovery_password_user_not_found_error">Такой пользователь не найден</string>

    <string name="profile_label">Личный кабинет</string>
    <string name="profile_current_user_label">Профиль</string>
    <string name="profile_edit">Редактировать профиль</string>
    <string name="profile_status">Ваш статус: %s</string>
    <string name="profile_status_more">Подробнее о статусе</string>
    <string name="profile_title">Личный кабинет</string>
    <string name="profile_settings">Настройки профиля</string>
    <string name="profile_favorite">Избранное</string>
    <string name="profile_me_events">Мои мероприятия</string>
...
    <string name="event_register_check_click_field">профиля</string>

    <string name="user_profile_label">Профиль</string>
    <string name="user_profile_edit">Редактировать</string>
    <string name="user_profile_add">Добавить</string>
    <string name="user_profile_save">Сохранить</string>
    <string name="user_profile_main_info">Основная информация</string>
    <string name="user_profile_increase_base_state">Повысить статус до базового</string>
    <string name="user_profile_contacts">Контакты</string>
    <string name="user_profile_interests">Интересы</string>
    <string name="user_profile_education">Образование</string>
    <string name="user_profile_experience">Опыт работы</string>

...
