<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/Profile.Edit.InputContainer"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/photo_title"
                style="@style/Profile.Edit.TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.example.ui.views.CustomAvatarView
                android:id="@+id/ivAvatar"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:layout_marginTop="9dp"
                android:contentDescription="@string/content_description_avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photo_title" />

            <TextView
                android:id="@+id/btnEdit"
                style="@style/ClickableTextView"
                android:layout_marginStart="20dp"
                android:text="@string/edit_title"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
                app:layout_constraintStart_toEndOf="@id/ivAvatar"
                app:layout_constraintTop_toTopOf="@id/ivAvatar"
                tools:ignore="MissingPrefix" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.example.ui.views.CustomTextMenuView
            android:id="@+id/etBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:inputHasCheckBox="true"
            app:inputHintText="@string/profile_birthday"
            app:inputIconDrawable="@drawable/ic_calendar_new"
            app:inputIconMode="custom"
            app:inputTitleText="@string/profile_birthday" />

        <com.example.ui.views.CustomTextMenuView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:inputHasCheckBox="true"
            app:inputHintText="@string/profile_gender"
            app:inputTitleText="@string/profile_gender" />

        <com.example.ui.views.CustomTextMenuView
            android:id="@+id/tvRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:inputHintText="@string/search_filter_region"
            app:inputIconDrawable="@drawable/ic_arrow_right_brown"
            app:inputIconMode="custom"
            app:inputTitleText="@string/profile_city" />

        <com.example.ui.views.CustomTextMenuView
            android:id="@+id/tvCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:inputHasCheckBox="true"
            app:inputHintText="@string/profile_locality"
            app:inputIconMode="custom"
            app:inputIconDrawable="@drawable/ic_arrow_right_brown" />

        <com.example.ui.views.CustomTextMenuView
            android:id="@+id/etMobilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:inputHintText="@string/profile_phone_mobile"
            app:inputTitleText="@string/profile_phone_mobile" />

        <TextView
            android:id="@+id/tvEditPhone"
            style="@style/ClickableTextView"
            android:layout_marginTop="10dp"
            android:text="@string/edit_title"
            tools:ignore="MissingPrefix" />

    </LinearLayout>
</layout>
