...
        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

<!--    <androidx.fragment.app.FragmentContainerView-->
<!--        android:id="@+id/navHostFragment"-->
<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:defaultNavHost="true"-->
<!--        app:layout_behavior="com.example.ui.views.toolbar.CustomAppBarLayoutBehavior"-->
<!--        app:navGraph="@navigation/main_navigation" />-->
...
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/main_nav_bar"
        style="@style/MainBottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/bottom_navigation_view_background_color"
        app:itemBackground="@color/bottom_navigation_view_background_color"
...
