...
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/Profile.Edit.Input.SingleLine"
                android:hint="@string/password_confirm_hint"
                android:inputType="textPassword" />
        </com.example.ui.views.CustomTextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/margin_horizontal_default"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/margin_horizontal_default"
...
